# xENSO

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  readthedocs.yml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: dependabot.yml  pre-commit-autoupdate.yml  publish-to-pypi.yml  tests.yml
docs/: environment.yml
docs/source/: api.rst  conf.py  index.rst
notebooks/: tutorial.ipynb
tests/: conftest.py  test_core.py  test_ecindex.py  test_indices.py  test_preprocessing.py  test_regions.py
tests/data/: ecindex.nc  ecindex_eofs.nc  ecindex_patterns.nc  ecindex_pcs.nc  ecindex_pcs_projection.nc  ecindex_pcs_projection_smooth.nc  ecindex_pcs_smooth_projection.nc  ecindex_smooth.nc  ersstv5.nc
xenso/: __init__.py  core.py  ecindex.py  indices.py  preprocessing.py  regions.py  utils.py
