[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-module = false
fail-under = 95
exclude = ["setup.py", "docs", "tests", "*_version.py"]
verbose = 1
quiet = false
color = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = " -v -n auto --cov-report term-missing --cov-report xml --cov xenso"
testpaths = [
    "tests",
]
